@@ -55,6 +55,10 @@ General framework-wide changes and improvements
       can be run. This greatly reduces compile time, as much of the code is independent and
       can be compiled and linked in parallel.
 
+   -- Started using <limits> templates to infer limits for things like <double>, etc.  This
+      updates the codebase to use more c++ oriented features as opposed to including
+      <float.h> or <cfloat> -- no effect on existing codebase or API
+
 --------------------------------------------------------------------------------
 base library
 
